# python_course_package

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: artifact_path  config.yml
.github/: config.yml  pull_request_template.md
docs/: Makefile  api.rst  conf.py  index.rst  research.rst
package-template/: _version.py
workout_analysis/: __init__.py  _version.py  hr_zones.py  io.py  plotting.py  utils.py  workout_analysis.py
workout_analysis/tests/: test_hr_zones.py  test_integration.py
