[metadata]
url = https://github.com/workout_analysis/workout_analysis
license = LGPL 2.1
author = workout_analysis developers
author_email = "enekouru@gmail.com"
maintainer = ""
maintainer_email = ""
description = "4 hour Python course"
description-file = README.md
long_description =
    # workout_analysis
    A template repo to use for new repositories.
long_description_content_type = 'text/markdown'
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
install_requires =
    numpy
    pandas
    plotly
packages = find:
include_package_data = False

[options.extras_require]
doc =
    matplotlib
    sphinx>=1.5.3
    sphinx-argparse
    sphinx-copybutton
    sphinx_rtd_theme
    sphinxcontrib-bibtex
tests =
    codecov
    coverage<5.0
    flake8>=3.7
    flake8-black
    flake8-isort
    pytest
    pytest-cov
dev =
    pre-commit
    versioneer
all =
    %(dev)s
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    workout_analysis = workout_analysis.workout_analysis:_main

[options.package_data]
* =
    resources/*
    tests/data/*

[versioneer]
VCS = git
style = pep440
versionfile_source = workout_analysis/_version.py
versionfile_build = workout_analysis/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
log_cli = true
